arrange tree, textArea comp-correct body overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Poppins:wght@200;300;400;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Poppins:wght@200;300;400;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  font-family: "Nunito", sans-serif;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Nunito', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  overflow: hidden;
 }
 
 .main-grid {
@@ -22,10 +23,6 @@ body {
 
 .card {
   @apply cursor-pointer rounded-xl shadow-slate-950 transition duration-300 ease-out hover:scale-95 hover:shadow-xl;
-}
-
-dialog::backdrop {
-  background-color: salmon;
 }
 
 /* ------------------------------------- */
